THE MAJOR UPDATE SAVE AND RETRIEVED DATA IN HOME SCREEN

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,21 +11,22 @@
         android:theme="@style/Theme.ExpenseManager">
         <activity
             android:name=".View.User_Notes"
-            android:exported="false"
+            android:exported="true"
             android:label="@string/title_activity_userdata"
             android:theme="@style/Theme.ExpenseManager.NoActionBar">
-
-
-        </activity>
-        <activity
-            android:name=".View.MainActivity"
-            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".View.MainActivity"
+            android:exported="false">
+
+
 
 
         </activity>
