--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,26 +10,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ExpenseManager">
         <activity
+            android:name=".View.Monthly_History"
+            android:exported="true" >
+
+        </activity>
+        <activity
             android:name=".View.User_Notes"
             android:exported="true"
             android:label="@string/title_activity_userdata"
             android:theme="@style/Theme.ExpenseManager.NoActionBar">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".View.MainActivity"
-            android:exported="false">
-
-
-
-
-        </activity>
+            android:exported="false"></activity>
     </application>
 
 </manifest>
