--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/appicon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/appicon"
         android:supportsRtl="true"
         android:theme="@style/Theme.ExpenseManager">
         <activity
@@ -17,7 +17,6 @@
         <activity
             android:name=".View.User_Notes"
             android:exported="true"
-            android:label="@string/title_activity_userdata"
             android:theme="@style/Theme.ExpenseManager.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
